# 4Win

./: README.md
4Gewinnt/DummyCppCmakeRepo-main/: .clang-format  CMakeLists.txt  README.md
4Gewinnt/DummyCppCmakeRepo-main/dummy/inc/dummy/: BotPlayer.hpp  FourWinsSetup.hpp  Player.hpp  fourWins.hpp  testClass.hpp
4Gewinnt/DummyCppCmakeRepo-main/dummy/src/: BotPlayer.cpp  FourWinsSetup.cpp  Player.cpp  fourWins.cpp  testClass.cpp
4Gewinnt/DummyCppCmakeRepo-main/dummy/test/: UnitestBoard.cpp  dummytest.cpp  unittest_testClass.cpp
4Gewinnt/DummyCppCmakeRepo-main/main/src/: main.cpp
